--- a/studentinfo.html
+++ b/studentinfo.html
@@ -4,192 +4,202 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Student Attendance Dashboard</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Supabase SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <!-- SheetJS (for Excel export) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <style>
-    /* Global Styles */
-    body {
-      padding: 20px;
-      background-color: #f8f9fa;
-    }
-    .hidden {
-      display: none;
-    }
-    .status-box {
-      display: inline-block;
-      width: 140px;
-      padding: 10px;
-      margin: 5px;
-      text-align: center;
-      border-radius: 5px;
-      color: #fff;
-      font-weight: bold;
-      font-size: 0.9em;
-    }
-    .status-green {
-      background-color: #28a745;
-    }
-    .status-red {
-      background-color: #dc3545;
-    }
-    /* Card Styles */
-    .card {
-      box-shadow: 0 0 50px rgba(6, 190, 246, 0.3);
-      margin-bottom: 1rem;
-    }
-    .card-header {
-      background-color: #007bff;
-      color: #fff;
-      font-weight: bold;
-    }
-    .btn-info {
-      background-color: #17a2b8;
-      border: none;
-    }
-    .btn-info:hover {
-      background-color: #138496;
-    }
-    label {
-      font-weight: 600;
-    }
-    /* Dashboard Styles */
-    #studentDashboard .card-body {
-      padding: 20px;
-    }
-    .dashboard-container {
-      display: flex;
-      gap: 20px;
-      align-items: stretch;
-    }
-    .dashboard-container > div {
-      flex: 1;
-      border: 2px solid #ccc;
-      border-radius: 8px;
-      padding: 5px;
-      text-align: center;
-    }
-    /* Big Box: Overall Attendance */
-    #totalAttendanceBox p {
-      margin: 0 0 10px;
-      font-weight: bold;
-    }
-    #totalAttendanceBox h1 {
-      font-size: 3rem;
-      margin: 0;
-    }
-    #totalAttendanceBox small {
-      display: block;
-      margin-top: 10px;
-      color: #666;
-    }
-    /* Small Box: Today's Attendance */
-    #todayAttendanceBox h5 {
-      margin-bottom: 15px;
-    }
-    #todayAttendanceBox div {
-      margin-bottom: 8px;
-    }
-    /* Reduced Size for the Report Section */
-    #reportContainer {
-      max-height: 500px; /* Increased from 250px */
-      overflow-y: auto;
-      font-size: 0.9rem;
-    }
-    /* Overlay (Popup) Styles */
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
-    #overlay .overlay-content {
-      width: 90%;
-      max-width: 600px;
-    }
-    /* For the detailed attendance table in the overlay,
-       add a fixed max height so that a vertical scrollbar (slider) appears if needed */
-    #detailsTableContainer {
-      max-height: 400px;
-      overflow-y: auto;
-    }
-    /* Internal Marks Overlay Styles */
-    #internalMarksOverlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 10000;
-    }
-    @media (max-width: 768px) {
-  /* Mobile Adjustments */
-
-  h1 {
-    font-size: 1.5rem;
+ <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+<!-- Supabase SDK -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<!-- SheetJS (for Excel export) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<style>
+  /* Global Styles */
+  body {
+    padding: 20px;
+    background-color: #000;  /* Black background */
+    color: #fff;             /* Default text color white */
   }
-
-  h2 {
-    font-size: 1.3rem;
+  .hidden {
+    display: none;
   }
-
-  .card-body {
+  .status-box {
+    display: inline-block;
+    width: 140px;
     padding: 10px;
+    margin: 5px;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 0.9em;
+  }
+  /* Instead of colored green/red statuses, use light gray for success and dark gray for error */
+  .status-green {
+    background-color: #0e7700;  /* Light gray */
+    color: #ffffff;               /* Black text */
+  }
+  .status-red {
+    background-color: #b20000;    /* Dark gray */
+    color: #fff;               /* White text */
   }
 
-  #studentDashboard .dashboard-container {
-    flex-direction: column;
+  /* Card Styles */
+  .card {
+    margin-bottom: 1rem;
+    background-color: #000000;    /* White card background */
+    color: #ffffff;               /* Black text inside cards */
+    /* A subtle shadow for separation */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-color: #fff;
+  }
+  .card-header {
+    background-color: #000000;  /* Black header */
+    color: #faeabf;             /* White header text */
+    font-weight: bold;
+  }
+  /* Update btn-info to a monochrome invert on hover */
+  .btn-info {
+    background-color: #000;
+    border: 1px solid #fff;
+    color: #fff;
+  }
+  .btn-info:hover {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+  }
+  label {
+    font-weight: 600;
   }
 
+  /* Dashboard Styles */
+  #studentDashboard .card-body {
+    padding: 20px;
+  }
+  .dashboard-container {
+    display: flex;
+    gap: 20px;
+    align-items: stretch;
+  }
+  .dashboard-container > div {
+    flex: 1;
+    border: 2px solid #fff;  /* White border */
+    border-radius: 8px;
+    padding: 5px;
+    text-align: center;
+  }
+
+  /* Big Box: Overall Attendance */
+  #totalAttendanceBox p {
+    margin: 0 0 10px;
+    font-weight: bold;
+  }
   #totalAttendanceBox h1 {
-    font-size: 1.8rem;
+    font-size: 3rem;
+    margin: 0;
+  }
+  #totalAttendanceBox small {
+    display: block;
+    margin-top: 10px;
+    color: #666;  /* A medium gray */
   }
 
-  .btn {
+  /* Small Box: Today's Attendance */
+  #todayAttendanceBox h5 {
+    margin-bottom: 15px;
+  }
+  #todayAttendanceBox div {
+    margin-bottom: 8px;
+  }
+
+  /* Reduced Size for the Report Section */
+  #reportContainer {
+    max-height: 500px; /* Increased from 250px */
+    overflow-y: auto;
     font-size: 0.9rem;
   }
 
-  /* Internal Marks Overlay */
-  #internalMarksOverlay .card {
-    max-width: 90%;
+  /* Overlay (Popup) Styles */
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
   }
-
-  /* Internal Marks Table Scrollable */
-  #internalMarksContent {
-    max-height: 60vh;
+  #overlay .overlay-content {
+    width: 90%;
+    max-width: 600px;
+  }
+  /* For the detailed attendance table in the overlay */
+  #detailsTableContainer {
+    max-height: 400px;
     overflow-y: auto;
-    overflow-x: auto;
   }
 
-  /* Table Adjustments */
-  table th, table td {
-    font-size: 0.85rem;
+  /* Internal Marks Overlay Styles */
+  #internalMarksOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
   }
 
-  /* Internal Marks Table for Small Screens */
-  table {
-    min-width: 600px; /* Ensure table content doesn't collapse */
+  @media (max-width: 768px) {
+    /* Mobile Adjustments */
+    h1 {
+      font-size: 1.5rem;
+    }
+    h2 {
+      font-size: 1.3rem;
+    }
+    .card-body {
+      padding: 10px;
+    }
+    #studentDashboard .dashboard-container {
+      flex-direction: column;
+    }
+    #totalAttendanceBox h1 {
+      font-size: 1.8rem;
+    }
+    .btn {
+      font-size: 0.9rem;
+    }
+    /* Internal Marks Overlay */
+    #internalMarksOverlay .card {
+      max-width: 90%;
+    }
+    /* Internal Marks Table Scrollable */
+    #internalMarksContent {
+      max-height: 60vh;
+      overflow-y: auto;
+      overflow-x: auto;
+    }
+    /* Table Adjustments */
+    table th,
+    table td {
+      font-size: 0.85rem;
+    }
+    /* Internal Marks Table for Small Screens */
+    table {
+      min-width: 600px; /* Ensure table content doesn't collapse */
+    }
   }
-}
-  </style>
+</style>
+
 </head>
 <body>
   <!-- Main Container -->
   <div class="container" id="mainContainer">
-    <h1 class="mb-4 text-center"><b>MIIT AttendX</b></h1>
+    <h1 class="mb-4 text-center" style="color: antiquewhite;"><b>MIIT AttendX</b></h1>
    
     <!-- Student Login Form -->
     <div class="card">
@@ -238,7 +248,7 @@
           </div>
           <!-- Small Box: Today's Attendance -->
           <div id="todayAttendanceBox">
-            <h5>Today's Attendance</h5>
+            <h5>Your Attendance Today</h5>
             <div id="todayAttendanceStatus">
               <!-- Hourly statuses and total day score will be inserted here -->
             </div>
